# openai-cli-rs

./: CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml  release.yml  rust.yml
src/: cli.rs  config.rs  main.rs  openai.rs
src/openai_rs/: chat.rs  completions.rs  edits.rs  embeddings.rs  images.rs  mod.rs  models.rs
