[package]
name = "openai-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
dotenv = "0.15.0"
futures-core = "0.3.30"
futures-util = "0.3.30"
homedir = "0.2.1"
lazy_static = "1.4.0"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.14"
